- Hardware management: Support temperature, clock and fanspeed readings for AMDGPU-Pro Driver
- Hardware management: Support --gpu-temp-retain for AMDGPU-Pro Driver
- Hardware management: Support --powertune-enable for AMDGPU-Pro Driver

##
## Bugs
##

- Fixed a bug when cracking a large salted hashlist status view showed 0H/s but progress counter increased

##
## Algorithms
##

- Reduce maximum number of allowed function calls per rule from 256 to 32 to save device memory
- Workaround for some OpenCL kernels to compile with AMDGPU-Pro Driver
- Allow words of length > 32 in wordlists for -a 0 for some slow hashes if no rules are in use
- Allow loading of bcrypt hashes with signature $2b$ (February 2014)
- Added new hash-mode 14000 = DES (PT = $salt, key = $pass)
- Added new hash-mode 14100 = 3DES (PT = $salt, key = $pass)
- Added new hash-mode 14400 = SHA1(CX)
- Added new hash-mode 99999 = Plaintext

##
## Technical
##

- Use .gitmodules to handle OpenCL headers dependency
- Abort session after NUM seconds of --runtime but do not count time in pause mode
- Added docs/credits.txt
- Added docs/team.txt
- Replaced some uint macros with enums types
- Improved default hashcat.hcstat

* changes v3.00 -> v3.10:

##
## Improvements
##

- Added mask display to modes 3, 6, and 7. Allows the user to see the custom character set used during the run
- Make Linux build POSIX compatible; Also allow it to actually compile on musl-libc systems
- Add support to compile on FreeBSD
- Make use of cl_context_properties[] to clCreateContext(), even if OpenCL specification allow the use of NULL, some runtimes fail without
- The Time.Estimated attribute in status display should also show --runtime limit if user set it
- Fix some strict aliasing rule violation on older compilers
- Fix some variable initializers on older compilers
- Replace DARWIN macro with compiler predefined macro __APPLE__
- Replace LINUX macro with compiler predefined macro __linux__